# example-tdp

./: .gitignore  pyproject.toml
.github/workflows/: update_artifacts.yml
docs/: architecture.puml  data_science.puml  my_architecture.puml  pipeline_protocol.puml
protocol/: protocol.yml
task-script/: README.md  config.json  main.py  requirements.txt
task-script/init/: before_install
task-script/task_script/: decorate_input_file.py  print_hello_world.py  push_data.py
task-script/tests/: test_business_logic.py
